# qt

./: .gitignore
AirportInspector/: CMakeLists.txt  airportstatswindow.cpp  airportstatswindow.h  airportstatswindowui.ui  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  timer.cpp
qt_02/: CMakeLists.txt  main.cpp
qt_03/: CMakeLists.txt  databaseconnectiondialog2.cpp  databaseconnectiondialog2.h  databaseconnectiondialog2.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt_04/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt_05/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
qt_06/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
qt_07/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
qt_08/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt_09/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
qt_10/: mainwindow.cpp  mainwindow.ui  tcpclient.cpp
